--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,38 @@
           <li><div id="theme-toggle" ripple-effect>toggle theme</div></li>
         </ul>
       </div>
+      <div class="section settings" style="display: none">
+        // иконка шестеренки слева (иконка прозрачная с серой линией)
+        // под иконкой туиблеры переключения настройки справа (зеленые и серые (как на афйноне) справа, текст слева
+        // если название настройки не помещается на одной строке, переносим название вниз...
+
+      </div>
+<!--      <div class="settings-wrapper wrapper">-->
+<!--        <div class="gear-icon">-->
+
+<!--        </div>-->
+<!--        <ul class="settings-list">-->
+<!--          <li>-->
+<!--            <div class="setting-name">-->
+<!--              dark theme-->
+<!--            </div>-->
+<!--            <div class="settings-toggler"></div>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <div class="setting-name">-->
+<!--              reduced motion (reduced animations)-->
+<!--            </div>-->
+<!--            <div class="settings-toggler"></div>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <div class="setting-name">-->
+<!--              ripple effect-->
+<!--            </div>-->
+<!--            <div class="settings-toggler"></div>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
+
       <main-navigation class="visible">
         <nav class="navigation">
           <div class="wrapper">
