--- a/src/index.html
+++ b/src/index.html
@@ -80,13 +80,15 @@
         </ul>
       </div>
 <!--      <div class="section settings" style="display: none">-->
-      <div class="section settings">
-<!--        иконка шестеренки слева (иконка прозрачная с серой линией)-->
-<!--        под иконкой туиблеры переключения настройки справа (зеленые и серые (как на афйноне) справа, текст слева-->
-<!--        если название настройки не помещается на одной строке, переносим название вниз...-->
-        <settings-component></settings-component>
-
-      </div>
+<!--      <div class="section settings">-->
+<!--&lt;!&ndash;        иконка шестеренки слева (иконка прозрачная с серой линией)&ndash;&gt;-->
+<!--&lt;!&ndash;        под иконкой туиблеры переключения настройки справа (зеленые и серые (как на афйноне) справа, текст слева&ndash;&gt;-->
+<!--&lt;!&ndash;        если название настройки не помещается на одной строке, переносим название вниз...&ndash;&gt;-->
+<!--        <settings-component></settings-component>-->
+<!--      </div>-->
+      <section class="section post">
+        <post-component></post-component>
+      </section>
 
       <main-navigation class="visible">
         <nav class="navigation">
