--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/styles/index.scss">
+  <link rel="stylesheet" href="styles/index.scss">
   <title>routing-player</title>
   <!--  preload some stuff (svg's)-->
-  <link rel="preload" href="~/src/assets/media/images/icons/note-icon.svg" as="image">
-  <link rel="preload" href="~/src/assets/media/images/icons/loading.svg" as="image">
-  <!--  <link rel="preload" href="~/src/assets/media/images/icons/play.svg" as="image">-->
-  <!--  <link rel="preload" href="~/src/assets/media/images/icons/pause.svg" as="image">-->
-  <!--  <link rel="preload" href="~/src/assets/media/images/icons/next.svg" as="image">-->
+  <link rel="preload" href="~/src/media/images/icons/note-icon.svg" as="image">
+  <link rel="preload" href="~/src/media/images/icons/loading.svg" as="image">
+  <!--  <link rel="preload" href="~/src/media/images/icons/play.svg" as="image">-->
+  <!--  <link rel="preload" href="~/src/media/images/icons/pause.svg" as="image">-->
+  <!--  <link rel="preload" href="~/src/media/images/icons/next.svg" as="image">-->
   <script>
     const getCurrentTheme = () => {
       const userDefinedTheme = localStorage.getItem('currentTheme')
@@ -49,7 +49,7 @@
         <div class="loader"></div>
         <div class="image-wrapper">
           <img
-              src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
+              src="~/src/media/images/tramvai_bandcamp_header_image.png"
               alt="tramvai bandcamp header image"
               height=180
               width=975
@@ -151,6 +151,6 @@
   <!--  <h1 class="text-3xl font-bold underline">-->
   <!--    Hello world!-->
   <!--  </h1>-->
-  <script type="module" src="~/src/assets/scripts/index.ts"></script>
+  <script type="module" src="~/src/scripts/index.ts"></script>
 </body>
 </html>
