--- a/src/index.html
+++ b/src/index.html
@@ -110,11 +110,11 @@
 <!--                  album page-->
 <!--                </a>-->
 <!--              </li>-->
-<!--              <li>-->
-<!--                <div id="open-settings">-->
-<!--                  open settings-->
-<!--                </div>-->
-<!--              </li>-->
+              <li>
+                <div id="open-sidebar">
+                  open sidebar
+                </div>
+              </li>
             </ul>
           </div>
         </nav>
