--- a/src/index.html
+++ b/src/index.html
@@ -65,19 +65,19 @@
     </header>
     <div id="swappable">
       <div class="navigation-menu" id="mobile-menu">
-        <style>
-
-        </style>
+        <div class="overlay"></div>
+        <div class="sidebar">
           <div class="avatar round"></div>
-        <div class="username">
-          @ivan
+          <div class="username">
+            @ivan
+          </div>
+          <ul>
+            <li><a href="/me" ripple-effect>profile</a></li>
+            <li><a href="/settings" custom-link ripple-effect>settings</a></li>
+            <!--          <li><a href=""></a></li>-->
+            <li><div id="theme-toggle" ripple-effect>toggle theme</div></li>
+          </ul>
         </div>
-        <ul>
-          <li><a href="/me" ripple-effect>profile</a></li>
-          <li><a href="/settings" custom-link ripple-effect>settings</a></li>
-<!--          <li><a href=""></a></li>-->
-          <li><div id="theme-toggle" ripple-effect>toggle theme</div></li>
-        </ul>
       </div>
 
       <main-navigation class="visible">
@@ -111,7 +111,8 @@
 <!--                </a>-->
 <!--              </li>-->
               <li>
-                <div id="open-sidebar">
+<!--                make this real button-->
+                <div id="open-sidebar" class="open-sidebar-button">
                   open sidebar
                 </div>
               </li>
