--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/index.scss">
   <title>routing-player</title>
+<!--  <div class="comments">-->
+<!--    <div class="new-comment-form-wrapper">-->
+<!--      <form id="new-comment-form">-->
+<!--        <label for="new-comment-field"></label>-->
+<!--        <textarea id="new-comment-field"></textarea>-->
+<!--        <button type="submit">-->
+<!--          submit a comment-->
+<!--        </button>-->
+<!--      </form>-->
+<!--    </div>-->
+<!--    <ul>-->
+<!--      <li>-->
+<!--        <span>-->
+<!--          comment author:-->
+<!--        </span>-->
+<!--        <span>-->
+<!--          comment text-->
+<!--        </span>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
   <!--  preload some stuff (svg's)-->
 <!--  <link rel="preload" href="~/src/media/images/icons/note-icon.svg" as="image">-->
 <!--  <link rel="preload" href="~/src/media/images/icons/loading.svg" as="image">-->
