--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,8 @@
       </main-navigation>
 <!--      <div class="wrapper" id="content-wrapper">-->
       <div id="content-wrapper">
+        <recent-posts></recent-posts>
+
         <!--&lt;!&ndash;        иконка шестеренки слева (иконка прозрачная с серой линией)&ndash;&gt;-->
         <!--&lt;!&ndash;        под иконкой туиблеры переключения настройки справа (зеленые и серые (как на афйноне) справа, текст слева&ndash;&gt;-->
         <!--&lt;!&ndash;        если название настройки не помещается на одной строке, переносим название вниз...&ndash;&gt;-->
