--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,16 @@
         <nav class="navigation">
           <div class="wrapper">
             <ul class="nav-links">
+              <li id="login-button">
+                <a href="/sign-in" custom-link ripple-effect>
+                  sign in
+                </a>
+              </li>
+              <li id="logout-button">
+                <a href="/sign-out" custom-link ripple-effect>
+                  sign out
+                </a>
+              </li>
               <li>
                 <a href="/" custom-link ripple-effect>
                   home
