--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,21 @@
       </main-navigation>
 <!--      <div class="wrapper" id="content-wrapper">-->
       <div id="content-wrapper">
+        <login-component>
+          <form>
+            
+          <input type="text" class="email-input">
+          <input type="password" class="password-input">
+          <button type="submit">submit</button>
+          </form>
+        </login-component>
+        <signup-component>
+          <form>
+          <input type="text" class="email-input">
+          <input type="password" class="password-input">
+          <button type="submit">submit</button>
+          </form>
+        </signup-component>
         <recent-posts></recent-posts>
 
         <!--&lt;!&ndash;        иконка шестеренки слева (иконка прозрачная с серой линией)&ndash;&gt;-->
