--- a/src/index.html
+++ b/src/index.html
@@ -158,12 +158,14 @@
 <!--      <div class="wrapper" id="content-wrapper">-->
       <div id="content-wrapper">
         <login-component>
-          <form>
-            
-          <input type="text" class="email-input">
+          <button type="button" id="sign-in-button">sign in</button>
+          <!-- <form> -->
+            <!-- <button type="submit"></button> -->
+          <!-- <input type="text" class="email-input">
           <input type="password" class="password-input">
           <button type="submit">submit</button>
-          </form>
+           -->
+          <!-- </form> -->
         </login-component>
         <signup-component>
           <form>
