--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
 <!--              </li>-->
               <li>
 <!--                make this real button-->
-                <div id="open-sidebar" class="open-sidebar-button">
+                <div id="open-sidebar" class="open-sidebar-button" ripple-effect>
                   open sidebar
                 </div>
               </li>
