--- a/src/index.html
+++ b/src/index.html
@@ -82,21 +82,7 @@
 
     </header>
     <div id="swappable">
-      <div class="navigation-menu" id="mobile-menu">
-        <div class="overlay"></div>
-        <div class="sidebar">
-          <div class="avatar round"></div>
-          <div class="username">
-            @ivan
-          </div>
-          <ul>
-            <li><a href="/me" ripple-effect>profile</a></li>
-            <li><a href="/settings" custom-link ripple-effect>settings</a></li>
-            <!--          <li><a href=""></a></li>-->
-            <li><div id="theme-toggle" ripple-effect>toggle theme</div></li>
-          </ul>
-        </div>
-      </div>
+      <sidebar-component></sidebar-component>
 
       <main-navigation class="visible">
         <nav class="navigation">
