--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,16 @@
       </div>
     </div>
   </div>
+  <!-- <footer>
+    <div class="wrapper">
+      <div id="footer-current-year"></div>
+    </div>
+    <script>
+      document.querySelector('#footer-current-year').innerHTML = new Date().getFullYear()
+    </script>
+  </footer> -->
+
+  
   <!--  <h1 class="text-3xl font-bold underline">-->
   <!--    Hello world!-->
   <!--  </h1>-->
