--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,9 @@
         <settings-component></settings-component>
         <user-profile-component></user-profile-component>
         <!--      </div>-->
+        <create-post>
+          <div id="editorjs"></div>
+        </create-post>
         <section class="section post">
           <post-component></post-component>
         </section>
